<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.utfpr.comunicacaowebmobile.activities.MenuPrincipalActivity">

    <Button
        android:id="@+id/btnCidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_cidades" />

    <Button
        android:id="@+id/btnClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_clientes" />

    <Button
        android:id="@+id/btnProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_produtos" />

    <Button
        android:id="@+id/btnPedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_pedidos" />
</LinearLayout>
